<resources>
    <string name="app_name">Consulta INSS</string>
    <string name="sim">SIM</string>
    <string name="nao">NÃO</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_ultimo_digito">Selecione o ultimo dígito do seu cartão.</string>
    <string name="minimun_salary_not_selected">Selecione uma opção!</string>
    <string name="digit_zero">0</string>
    <string name="digit_one">1</string>
    <string name="digit_two">2</string>
    <string name="digit_three">3</string>
    <string name="digit_four">4</string>
    <string name="digit_five">5</string>
    <string name="digit_six">6</string>
    <string name="digit_seven">7</string>
    <string name="digit_eight">8</string>
    <string name="digit_nine">9</string>
    <string name="janeiro">Janeiro</string>
    <string name="fevereiro">Fevereiro</string>
    <string name="marco">Março</string>
    <string name="abril">Abril</string>
    <string name="maio">Maio</string>
    <string name="junho">Junho</string>
    <string name="julho">Julho</string>
    <string name="agosto">Agosto</string>
    <string name="setembro">Setembro</string>
    <string name="outubro">Outubro</string>
    <string name="novembro">Novembro</string>
    <string name="dezembro">Dezembro</string>
    <string name="card_image_description">cartão indicando o ultimo dígito</string>
    <string name="salario_minimo">É beneficiário de mais de um salário mínimo?</string>
    <string name="information">informações</string>
    <string name="ver_calendario">Ver Calendário</string>
    <string name="cancel">OK</string>
    <string name="calendario_2020">Calendário 2020</string>
    //DIGÍTO 1 E MAIS DE UM SALÁRIO MÍNIMO
    <!--DIGÍTO 0-->
    <string name="D0">07/02/2020</string>
    <string name="D0F">06/03/2020</string>
    <string name="D0MA">07/04/2020</string>
    <string name="D0A">08/05/2020</string>
    <string name="D0MAIO">05/06/2020</string>
    <string name="D0JUNHO">07/07/2020</string>
    <string name="D0JULHO">07/08/2020</string>
    <string name="D0AGOSTO">08/09/2020</string>
    <string name="D0SETEMBRO">07/10/2020</string>
    <string name="D0OUTUBRO">09/11/2020</string>
    <string name="D0NOVEMBRO">07/12/2020</string>
    <string name="D0DEZEMBRO">08/01/2021</string>
    <!-- DIGÍTO 1 E ATÉ UM SALÁRIO MÍNIMO-->
    <string name="D1NJANEIRO">27/01/2020</string>
    <string name="D1NFEVEREIRO">19/02/2020</string>
    <string name="D1NMARCO">25/03/2020</string>
    <string name="D1NABRIL">24/04/2020</string>
    <string name="D1NMAIO">25/05/2020</string>
    <string name="D1NJUNHO">24/06/2020</string>
    <string name="D1NJULHO">27/07/2020</string>
    <string name="D1NAGOSTO">25/08/2020</string>
    <string name="D1NSETEMBRO">24/09/2020</string>
    <string name="D1NOUTUBRO">26/10/2020</string>
    <string name="D1NNOVEMBRO">24/11/2020</string>
    <string name="D1NDEZEMBRO">22/12/2020</string>
    <!--DIGÍTO 1 E MAIS DE UM SALÁRIO MÍNIMO-->
    <string name="D1SJANEIRO">03/02/2020</string>
    <string name="D1SFEVEREIRO">02/03/2020</string>
    <string name="D1SMARCO">01/04/2020</string>
    <string name="D1SABRIL">04/05/2020</string>
    <string name="D1SMAIO">01/06/2020</string>
    <string name="D1SJUNHO">01/07/2020</string>
    <string name="D1SJULHO">03/08/2020</string>
    <string name="D1SAGOSTO">01/09/2020</string>
    <string name="D1SSETEMBRO">01/10/2020</string>
    <string name="D1SOUTUBRO">03/11/2020</string>
    <string name="D1SNOVEMBRO">01/12/2020</string>
    <string name="D1SDEZEMBRO">04/01/2021</string>
    <!--DIGÍTO 2 E ATÉ UM SALÁRIO MÍNIMO-->
    <string name="D2NJANEIRO">28/01/2020</string>
    <string name="D2NFEVEREIRO">20/02/2020</string>
    <string name="D2NMARCO">26/03/2020</string>
    <string name="D2NABRIL">27/04/2020</string>
    <string name="D2NMAIO">26/05/2020</string>
    <string name="D2NJUNHO">25/06/2020</string>
    <string name="D2NJULHO">28/07/2020</string>
    <string name="D2NAGOSTO">26/08/2020</string>
    <string name="D2NSETEMBRO">25/09/2020</string>
    <string name="D2NOUTUBRO">27/10/2020</string>
    <string name="D2NOVEMBRO">25/11/2020</string>
    <string name="D2DEZEMBRO">23/12/2020</string>
    <!--DIGÍTO 2 E MAIS UM SALÁRIO MÍNIMO-->
    <string name="D2SJANEIRO">04/02/2020</string>
    <string name="D2SFEVEREIRO">03/03/2020</string>
    <string name="D2SMARCO">02/04/2020</string>
    <string name="D2SABRIL">05/05/2020</string>
    <string name="D2SMAIO">02/06/2020</string>
    <string name="D2SJUNHO">02/07/2020</string>
    <string name="D2SJULHO">04/08/2020</string>
    <string name="D2SAGOSTO">02/09/2020</string>
    <string name="D2SSETEMBRO">02/10/2020</string>
    <string name="D2SOUTUBRO">04/11/2020</string>
    <string name="D2SNOVEMBRO">02/12/2020</string>
    <string name="D2SDEZEMBRO">05/01/2021</string>
    <!--DIGÍTO 3 E ATÉ UM SALÁRIO MÍNIMO-->
    <string name="D3NJANEIRO">29/01/2020</string>
    <string name="D3NFEVEREIRO">21/02/2020</string>
    <string name="D3NMARCO">27/03/2020</string>
    <string name="D3NABRIL">28/04/2020</string>
    <string name="D3NMAIO">27/05/2020</string>
    <string name="D3NJUNHO">26/06/2020</string>
    <string name="D3NJULHO">29/07/2020</string>
    <string name="D3NAGOSTO">27/08/2020</string>
    <string name="D3NSETEMBRO">28/09/2020</string>
    <string name="D3NOUTUBRO">28/10/2020</string>
    <string name="D3NOVEMBRO">26/11/2020</string>
    <string name="D3DEZEMBRO">28/12/2020</string>
    <!--DIGÍTO 3 E MAIS UM SALÁRIO MÍNIMO-->
    <string name="D3SJANEIRO">05/02/2020</string>
    <string name="D3SFEVEREIRO">04/03/2020</string>
    <string name="D3SMARCO">03/04/2020</string>
    <string name="D3SABRIL">06/05/2020</string>
    <string name="D3SMAIO">03/06/2020</string>
    <string name="D3SJUNHO">03/07/2020</string>
    <string name="D3SJULHO">05/08/2020</string>
    <string name="D3SAGOSTO">03/09/2020</string>
    <string name="D3SSETEMBRO">05/10/2020</string>
    <string name="D3SOUTUBRO">05/11/2020</string>
    <string name="D3SNOVEMBRO">03/12/2020</string>
    <string name="D3SDEZEMBRO">06/01/2021</string>
    <!--DIGÍTO 4 E ATÉ UM SALÁRIO MÍNIMO-->
    <string name="D4NJANEIRO">30/01/2020</string>
    <string name="D4NFEVEREIRO">27/02/2020</string>
    <string name="D4NMARCO">30/03/2020</string>
    <string name="D4NABRIL">29/04/2020</string>
    <string name="D4NMAIO">28/05/2020</string>
    <string name="D4NJUNHO">29/06/2020</string>
    <string name="D4NJULHO">30/07/2020</string>
    <string name="D4NAGOSTO">28/08/2020</string>
    <string name="D4NSETEMBRO">29/09/2020</string>
    <string name="D4NOUTUBRO">29/10/2020</string>
    <string name="D4NOVEMBRO">27/11/2020</string>
    <string name="D4DEZEMBRO">29/12/2020</string>
    <!--DIGÍTO 4 MAIS DE UM SALÁRIO MÍNIMO-->
    <string name="D4SJANEIRO">06/02/2020</string>
    <string name="D4SFEVEREIRO">05/03/2020</string>
    <string name="D4SMARCO">06/04/2020</string>
    <string name="D4SABRIL">07/05/2020</string>
    <string name="D4SMAIO">04/06/2020</string>
    <string name="D4SJUNHO">06/07/2020</string>
    <string name="D4SJULHO">06/08/2020</string>
    <string name="D4SAGOSTO">04/09/2020</string>
    <string name="D4SSETEMBRO">06/10/2020</string>
    <string name="D4SOUTUBRO">06/11/2020</string>
    <string name="D4SNOVEMBRO">04/12/2020</string>
    <string name="D4SDEZEMBRO">07/01/2021</string>
    <!--DIGÍTO 5 E ATÉ UM SALÁRIO MÍNIMO-->
    <string name="D5NJANEIRO">31/01/2020</string>
    <string name="D5NFEVEREIRO">28/02/2020</string>
    <string name="D5NMARCO">31/03/2020</string>
    <string name="D5NABRIL">30/04/2020</string>
    <string name="D5NMAIO">29/05/2020</string>
    <string name="D5NJUNHO">30/06/2020</string>
    <string name="D5NJULHO">31/07/2020</string>
    <string name="D5NAGOSTO">31/08/2020</string>
    <string name="D5NSETEMBRO">30/09/2020</string>
    <string name="D5NOUTUBRO">30/10/2020</string>
    <string name="D5NOVEMBRO">30/11/2020</string>
    <string name="D5DEZEMBRO">30/12/2020</string>
    <!--DIGÍTO 5 MAIS DE UM SALÁRIO MÍNIMO-->
    <string name="D5SJANEIRO">07/02/2020</string>
    <string name="D5SFEVEREIRO">06/03/2020</string>
    <string name="D5SMARCO">07/04/2020</string>
    <string name="D5SABRIL">08/05/2020</string>
    <string name="D5SMAIO">05/06/2020</string>
    <string name="D5SJUNHO">07/07/2020</string>
    <string name="D5SJULHO">07/08/2020</string>
    <string name="D5SAGOSTO">08/09/2020</string>
    <string name="D5SSETEMBRO">07/10/2020</string>
    <string name="D5SOUTUBRO">09/11/2020</string>
    <string name="D5SNOVEMBRO">07/12/2020</string>
    <string name="D5SDEZEMBRO">08/01/2021</string>
    <!--DIGÍTO 6-->
    <string name="D6JANEIRO">03/02/2020</string>
    <string name="D6FEVEREIRO">02/03/2020</string>
    <string name="D6MARCO">01/04/2020</string>
    <string name="D6ABRIL">04/05/2020</string>
    <string name="D6MAIO">01/06/2020</string>
    <string name="D6JUNHO">01/07/2020</string>
    <string name="D6JULHO">03/08/2020</string>
    <string name="D6AGOSTO">01/09/2020</string>
    <string name="D6SETEMBRO">01/10/2020</string>
    <string name="D6OUTUBRO">03/11/2020</string>
    <string name="D6NOVEMBRO">01/12/2020</string>
    <string name="D6DEZEMBRO">04/01/2021</string>
    <!--DIGÍTO 7-->
    <string name="D7JANEIRO">04/02/2020</string>
    <string name="D7FEVEREIRO">03/03/2020</string>
    <string name="D7MARCO">02/04/2020</string>
    <string name="D7ABRIL">05/05/2020</string>
    <string name="D7MAIO">02/06/2020</string>
    <string name="D7JUNHO">02/07/2020</string>
    <string name="D7JULHO">04/08/2020</string>
    <string name="D7AGOSTO">02/09/2020</string>
    <string name="D7SETEMBRO">02/10/2020</string>
    <string name="D7OUTUBRO">04/11/2020</string>
    <string name="D7NOVEMBRO">02/12/2020</string>
    <string name="D7DEZEMBRO">05/01/2021</string>
    <!--DIGÍTO 8-->
    <string name="D8JANEIRO">05/02/2020</string>
    <string name="D8FEVEREIRO">04/03/2020</string>
    <string name="D8MARCO">03/04/2020</string>
    <string name="D8ABRIL">06/05/2020</string>
    <string name="D8MAIO">03/06/2020</string>
    <string name="D8JUNHO">03/07/2020</string>
    <string name="D8JULHO">05/08/2020</string>
    <string name="D8AGOSTO">03/09/2020</string>
    <string name="D8SETEMBRO">05/10/2020</string>
    <string name="D8OUTUBRO">05/11/2020</string>
    <string name="D8NOVEMBRO">03/12/2020</string>
    <string name="D8DEZEMBRO">06/01/2021</string>
    <!--DIGÍTO 9-->
    <string name="D9JANEIRO">06/02/2020</string>
    <string name="D9FEVEREIRO">05/03/2020</string>
    <string name="D9MARCO">06/04/2020</string>
    <string name="D9ABRIL">07/05/2020</string>
    <string name="D9MAIO">04/06/2020</string>
    <string name="D9JUNHO">06/07/2020</string>
    <string name="D9JULHO">06/08/2020</string>
    <string name="D9AGOSTO">04/09/2020</string>
    <string name="D9SETEMBRO">06/10/2020</string>
    <string name="D9OUTUBRO">06/11/2020</string>
    <string name="D9NOVEMBRO">04/12/2020</string>
    <string name="D9DEZEMBRO">07/01/2021</string>
    <string name="digit_not_selected">Por favor, selecione o último dígito do seu cartão!</string>
    <string name="consulta_inss">Consulta INSS</string>
    <string name="share_text_with">Compartilhar esse aplicativo com:</string>
    <string name="compartilhar_aplicativo">Compartilhar Aplicativo</string>
    <string name="share_button">Share Button</string>
    <string name="back_button">Back Button</string>
    <string name="blue">blue</string>
</resources>
