<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".LastCardDigitDialogFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/ubuntu_medium"
            android:paddingStart="8dp"
            android:paddingEnd="0dp"
            android:text="@string/text_ultimo_digito"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:background="@android:color/transparent"
            android:layout_marginTop="10dp"
            android:src="@android:drawable/ic_menu_info_details"
            android:contentDescription="@string/information" />

    </LinearLayout>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:background="@drawable/radio_group_strock"
        android:orientation="vertical"
        android:padding="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/radio_digit_zero"
                style="@style/last_digit_radio_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/radio_button_digit_selector"
                android:checked="true"
                android:text="@string/digit_zero" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/radio_digit_one"
                style="@style/last_digit_radio_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/radio_button_digit_selector"
                android:text="@string/digit_one" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/radio_digit_two"
                style="@style/last_digit_radio_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/radio_button_digit_selector"
                android:text="@string/digit_two" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/radio_digit_three"
                style="@style/last_digit_radio_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/radio_button_digit_selector"
                android:text="@string/digit_three" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/radio_digit_four"
                style="@style/last_digit_radio_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/radio_button_digit_selector"
                android:text="@string/digit_four" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/radio_digit_five"
                style="@style/last_digit_radio_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/radio_button_digit_selector"
                android:text="@string/digit_five" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/radio_digit_six"
                style="@style/last_digit_radio_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/radio_button_digit_selector"
                android:text="@string/digit_six" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/radio_digit_seven"
                style="@style/last_digit_radio_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/radio_button_digit_selector"
                android:text="@string/digit_seven" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/radio_digit_eight"
                style="@style/last_digit_radio_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/radio_button_digit_selector"
                android:text="@string/digit_eight" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/radio_digit_nine"
                style="@style/last_digit_radio_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/radio_button_digit_selector"
                android:text="@string/digit_nine" />

        </LinearLayout>

    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>