<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/salario_text"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/ubuntu_medium"
        android:text="@string/salario_minimo"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/salario_text">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rbSim"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/radio_button_sim_selector"
            android:button="@android:color/transparent"
            android:checked="true"
            android:gravity="center"
            android:onClick="onRadioButtonClicked"
            android:text="@string/sim"
            android:textColor="@android:color/white" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rbNao"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/radio_button_nao_selector"
            android:button="@android:color/transparent"
            android:gravity="center"
            android:onClick="onRadioButtonClicked"
            android:text="@string/nao"
            android:textColor="@android:color/holo_green_light" />

    </RadioGroup>

    <include
        layout="@layout/last_card_digit_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>